// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        0
      </span>
      
    </span>
    
  </div>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  className="ant-statistic {}"
>
  <div
    className="ant-statistic-title"
  >
    Statistic title
  </div>
  <div
    className="ant-statistic-content"
  >
    
    <span
      className="ant-statistic-content-value"
    >
      <span
        className="ant-statistic-content-value-int"
      >
        
        0
      </span>
      
    </span>
    
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
